--- a/index.html
+++ b/index.html
@@ -9,7 +9,55 @@
 </head>
 <body>
     <div class="navbar">
-        <img id="logo" src="../assets/your-logo-here.jpg">
+        <h1><img id="logo" src="../assets/your-logo-here.jpg"> Company Name</h1>
+        <div class="navlinks">
+            <a href="#Locations">Locations</a>
+            <a href="#Hours">Hours</a>
+            <a href="#About Us">About Us</a>
+            <a href="#Contact Us">Contact Us</a>
+        </div>
+    </div>
+    <div class="banner"></div>
+    <br/>
+    <div class="aboutus">
+        <h3><u>About Us</u></h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+            Sodales ut eu sem integer vitae justo eget magna fermentum. 
+            Ac orci phasellus egestas tellus rutrum tellus pellentesque eu. 
+            Non quam lacus suspendisse faucibus interdum posuere lorem ipsum. 
+            Lacus suspendisse faucibus interdum posuere. 
+            Sagittis eu volutpat odio facilisis mauris sit amet. 
+            Blandit volutpat maecenas volutpat blandit aliquam. 
+            Mattis nunc sed blandit libero. 
+            Morbi blandit cursus risus at ultrices mi tempus imperdiet nulla. 
+            Mattis molestie a iaculis at erat pellentesque. 
+            Scelerisque fermentum dui faucibus in ornare.
+        </p>
+        <p>
+            Adipiscing elit ut aliquam purus sit amet luctus. 
+            Justo nec ultrices dui sapien eget mi proin sed libero. 
+            Sollicitudin nibh sit amet commodo nulla. Eget nulla facilisi etiam dignissim diam. 
+            Id eu nisl nunc mi ipsum faucibus vitae. 
+            Dignissim cras tincidunt lobortis feugiat vivamus. 
+            In arcu cursus euismod quis viverra nibh cras pulvinar mattis. 
+            Interdum varius sit amet mattis. Tristique risus nec feugiat in. 
+            Auctor augue mauris augue neque gravida. 
+            Egestas quis ipsum suspendisse ultrices gravida dictum fusce.
+        </p>
+        <p>
+            Sagittis nisl rhoncus mattis rhoncus urna neque viverra. 
+            Ut tellus elementum sagittis vitae et leo duis. 
+            Mattis pellentesque id nibh tortor id aliquet. 
+            Orci dapibus ultrices in iaculis nunc sed augue lacus viverra. 
+            Nibh tortor id aliquet lectus proin nibh nisl condimentum. 
+            Nisl condimentum id venenatis a condimentum vitae sapien. 
+            Ullamcorper a lacus vestibulum sed arcu non odio euismod. 
+            Pellentesque elit eget gravida cum sociis natoque penatibus et magnis. 
+            Ultricies mi quis hendrerit dolor magna eget. Sodales ut etiam sit amet nisl purus. 
+            Vulputate ut pharetra sit amet aliquam. Lectus sit amet est placerat in egestas erat. 
+            Nibh mauris cursus mattis molestie a iaculis at erat.
+        </p>
     </div>
     
 </body>
